@@ -152,7 +152,7 @@
           li { color:red; }
         &lt;/style&gt;
       &lt;/head&gt;
-      &lt;body&gt;
+      &lt;body&gt;&lt;span style="color:purple"&gt;
       &lt;img src="../images/xinha_logo.gif" usemap="#m1"&gt;
       &lt;map name="m1"&gt;
       &lt;area shape="rect" coords="137,101,255,124" href="http://www.mydomain.com"&gt;
@@ -162,21 +162,21 @@
         Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
         Aliquam et tellus vitae justo varius placerat. Suspendisse iaculis
         velit semper dolor. Donec gravida tincidunt mi. Curabitur tristique
-        ante elementum turpis. Aliquam nisl. Nulla posuere neque non
-        tellus. Morbi vel nibh. Cum sociis natoque penatibus et magnis dis
+        ante elementum turpis.  &lt;span style="color:green">Aliquam &lt;/span> nisl. Nulla posuere neque non
+        tellus. Morbi vel nibh. &lt;font face="Arial">&lt;font color="#009933">Cum  sociis natoque&lt;/font>&lt;/font&gt; penatibus et magnis dis
         parturient montes, nascetur ridiculus mus. Nam nec wisi. In wisi.
         Curabitur pharetra bibendum lectus.
       &lt;/p&gt;
 
       &lt;ul&gt;
-        &lt;li&gt; Phasellus et massa sed diam viverra semper.  &lt;/li&gt;
+        &lt;li style="color:green"&gt; Phasellus et massa sed diam viverra semper.  &lt;/li&gt;
         &lt;li&gt; Mauris tincidunt felis in odio.              &lt;/li&gt;
         &lt;li&gt; Nulla placerat nunc ut pede.                 &lt;/li&gt;
         &lt;li&gt; Vivamus ultrices mi sit amet urna.           &lt;/li&gt;
         &lt;li&gt; Quisque sed augue quis nunc laoreet volutpat.&lt;/li&gt;
         &lt;li&gt; Nunc sit amet metus in tortor semper mattis. &lt;/li&gt;
       &lt;/ul&gt;
-      &lt;/body&gt;
+      &lt;/span&gt;&lt;/body&gt;
       &lt;/html&gt;
     </textarea>
 
