@@ -6,6 +6,9 @@ http://xinha.org
 Release History
 Xinha 0.95 (due soon)
 Bugs Fixed
+ * fixed #1040 htmlRemoveTags doesn't work in IE 
+ * fixed #645 IE Save as function only saves the original html 
+ * fixed #1136 FF3 Linux select boxes in toolbar are too small 
  * fixed #1100 Extended File Manager - Error after opening window
  * fixed #1103 [TransformInnerHTML] IE breaks singlet attributes starting with "no"
  * fixed #1086 Repeated javascript insertion in onclick attributes
@@ -22,8 +25,14 @@ Bugs Fixed
  * fixed #1040 htmlRemoveTags doesn't work in IE
  * fixed #1015 Mozilla shows scrollbars on click in Stylist 
  * #918 removed mozParaHandler dirty as it had been broken for a long time
+ * fixed #1015 Mozilla shows scrollbars on click in Stylist 
+ * fixed #1148 HTML entities break when cursor is inside when switching from HTML to WYSIWYG 
  
 Enhancements
+ * #1143  add Safari support
+ * #1138 added API functions Xinha.getEditor(), Xinha.prototype.getPluginInstance(), Xinha.addOnloadHandler() 
+ * #1137 [Equation] FF3 fixes & improved way of avoiding formula changes in editor
+ * #1150 synchronize "Remove Format" between browsers
  * added plugin PreserveScripts for enhanced editing of pages containing PHP and/or JavaScript ()
  * Loading message facelift
  * added XinhaLoader.js for enhanced user experience through early loading message
@@ -35,6 +44,7 @@ Enhancements
  * #1137 [Equation] improved way of avoiding formula changes in editor
  * #442 removed alert "Your Document is not well formed..."
  * #1119 disabled Firefox 2 spell check when ContextMenu is enabled 
+ * added a plugin "GenericPlugin" as a democase for plugin event handlers
 
 I18n
  * #1109 Spanish language extended
